<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.rakuten.gap.ads.rakutenrewardnative.sampleapp.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/go_to_loginFragment"
            app:destination="@id/loginFragment" />

        <action
            android:id="@+id/go_to_missionsFragment"
            app:destination="@id/missionsFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.rakuten.gap.ads.rakutenrewardnative.sampleapp.login.LoginFragment"
        android:label="@string/label_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/missionsFragment"
        android:name="com.rakuten.gap.ads.rakutenrewardnative.sampleapp.mission.MissionsFragment"
        android:label="@string/label_missions" />
</navigation>