<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/auth_is_signed_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        android:text="@string/auth_api_signed_in"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/auth_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        android:text="@string/auth_api_username"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/auth_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        android:text="@string/auth_api_user_info"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

</LinearLayout>